CHANGED view AddUser

--- a/Homework_Module17/Homework_Module17/Views/User/AddUser.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/AddUser.cshtml
@@ -19,6 +19,6 @@
     </p>
     <p>
         @Html.DisplayNameFor(user => user.IsMarried)
-        @Html.TextBoxFor(user => user.IsMarried)
+        @Html.CheckBoxFor(user => user.IsMarried, false)
     </p>
 }
