CHANGED view Index

--- a/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
@@ -9,3 +9,5 @@
         @: <li>@($"Name: {user.Name}, Sex: {user.Sex}, Country: {user.Country}, IsMarried: {user.IsMarried}")</li>
     }
 </ul>
+
+@Html.ActionLink("AddUser", "AddNewUser")
