COMPLETED controller UserController

--- a/Homework_Module17/Homework_Module17/Views/User/AddUser.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/AddUser.cshtml
@@ -21,6 +21,7 @@
         @Html.DisplayNameFor(user => user.IsMarried)
         @Html.CheckBoxFor(user => user.IsMarried, false)
     </p>
+    <button type="submit">Submit</button>
 }
 
 @Html.Partial("_GoBack")
