--- a/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
@@ -10,4 +10,5 @@
     }
 </ul>
 
-@Html.ActionLink("AddUser", "AddNewUser")
+@Html.ActionLink("AddNewUser", "AddUser")
+@Html.ActionLink("GetUser", "GetUser")
