--- a/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Homework_Module17
+@using Homework_Module17.Models
+@using Homework_Module17.SeparateElements
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
