--- a/Homework_Module17/Homework_Module17/Views/User/GetUser.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/GetUser.cshtml
@@ -1,9 +1,9 @@
-﻿@model UserViewModel
+﻿@model int
 
 @{
     ViewData["Title"] = "GetUser Page";
 }
 
-@await Component.InvokeAsync("GetUser")
+@await Component.InvokeAsync("GetUser", Model)
 
 @Html.Partial("_GoBack")
