--- a/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
@@ -11,4 +11,5 @@
 </ul>
 
 @Html.ActionLink("AddNewUser", "AddUser")
-@Html.ActionLink("GetUser", "GetUser")
+@Html.ActionLink("GetFirstUser", "GetUser")
+@Html.ActionLink("DeleteUser", "DeleteUser")
