--- a/Homework_Module17/Homework_Module17/Views/User/GetUser.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/GetUser.cshtml
@@ -1,6 +1,5 @@
 ﻿@model int
 
-<li>@await Component.InvokeAsync("GetUser", Model)</li>
-
+@await Component.InvokeAsync("GetUser", Model)
 
 <p>@await Html.PartialAsync("_GoBack")</p>
