--- a/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
@@ -21,6 +21,15 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">GoHome</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="AddUser">AddUser</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="DeleteUser">DeleteUser</a>
+                    </li>
                 </ul>
             </div>
         </div>
