--- a/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Homework_Module17
-
+@using Homework_Module17.Services
+@using Homework_Module17.ViewModels
+@using Homework_Module17.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
