--- a/Homework_Module17/Homework_Module17/Views/User/DeleteUser.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/DeleteUser.cshtml
@@ -2,7 +2,7 @@
 
 @using (@Html.BeginForm())
 {
-    @Html.TextBox("userIndex")
+    @Html.TextBox("userNumberAtIndex")
     <button type="submit">Delete</button>
 }
 
