--- a/Homework_Module17/Homework_Module17/Views/User/AddUser.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/AddUser.cshtml
@@ -1,9 +1,10 @@
-﻿
+﻿@using Homework_Module17.Enums
+
 @model UserViewModel;
 
 @using (@Html.BeginForm(FormMethod.Post))
 {
-    <h1>Add New User: </h1>
+    <h1>Add New User =) : </h1>
 
     <p>
         @Html.NameFor(user => user.Name):
@@ -11,18 +12,18 @@
     </p>
     <p>
         @Html.NameFor(user => user.Sex):
-        @Html.DropDownListFor(user => user.Sex, Html.GetEnumSelectList<UserSex>())
+        @Html.DropDownListFor(user => user.Sex, Html.GetEnumSelectList<SexOfUser>())
     </p>
     <p>
         @Html.NameFor(user => user.Country):
-        @Html.DropDownListFor(user => user.Country, new SelectList(new List<string>{ "Беларусь", "Польша", "Украина" }))
+        @Html.DropDownListFor(user => user.Country, new SelectList(new List<string>{ "Belarus", "Poland", "Ukraine" }))
     </p>
     <p>
         @Html.NameFor(user => user.IsMarried):
         @Html.CheckBoxFor(user => user.IsMarried)
     </p>
 
-    <button type="submit">Add User</button>
+    <button type="SUBMIT">Add User</button>
 }
 
 @await Html.PartialAsync("RETURN")
