--- a/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/Index.cshtml
@@ -5,7 +5,7 @@
 <ul>
     @if (@Model.Count == 0)
     {
-        <h2>No users awailable...</h2>
+        <h2>No users is here...... NEEEEEEEEEEEED MORE USERS</h2>
     }
     else
     {
