--- a/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
@@ -21,6 +21,21 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="GetUsers">Get users with GetUsers action</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Get users with index action</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="AddUser">AddUser</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="GetUser">Get user per its index</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="DeleteUser">Delete user per its index</a>
+                    </li>
                 </ul>
             </div>
         </div>
