--- a/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
@@ -21,6 +21,11 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserView">AllUser</a>
+                    </li>
                 </ul>
             </div>
         </div>
