--- a/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Homework_Module17
+@using Homework_Module17.Models
+@using Homework_Module17.Components
+@using Homework_Module17.Controllers
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
