--- a/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using Homework_Module17
+@using Homework_Module17.Models
+@using Homework_Module17.Services
+@using Homework_Module17.Controllers
+@using Homework_Module17.Enums
+@using Homework_Module17.SeparateComponents
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
