--- a/Homework_Module17/Homework_Module17/Views/User/Components/GetUser/UserInfo.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/Components/GetUser/UserInfo.cshtml
@@ -9,5 +9,5 @@
 @{
      string sIsMarried = "Yes";
      if (!Model.IsMarried) sIsMarried = "No";
-     <li>@("Name: "+Model.Name+"; Country: "+Model.Country+"; Sex: "+Model.Sex+"; IsMarried:"+sIsMarried)</li> 
+     <h1>@("Name: "+Model.Name+"; Country: "+Model.Country+"; Sex: "+Model.Sex+"; IsMarried:"+sIsMarried)</h1> 
 }
