--- a/Homework_Module17/Homework_Module17/Views/User/GetUsers.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/User/GetUsers.cshtml
@@ -1,9 +1,8 @@
 ﻿
 @model List<UserViewModel>
-
-@*
-        ViewBag.Title("GetUsers field");
-*@
+@{
+    ViewBag.Title = "GetUsers field";
+}
     <h4>GetUsers field</h4>
 
  <ul>
