Maybe well-done :3

--- a/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
+++ b/Homework_Module17/Homework_Module17/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Homework_Module17</a>
+            <a class="navbar-brand" asp-area="" asp-controller="User" asp-action="Index">User Page</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -19,8 +19,15 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="AddUser">Add New User</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="GetUser">Get First User</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="DeleteUser">Delete User</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
@@ -34,7 +41,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2022 - Homework_Module17
+        <p class="text-center">2022 NET16. - Pavel Gamezo</p>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
